--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,7 @@
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
-            <version>5.8.4</version>
+            <version>5.8.9</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
@@ -115,7 +115,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>2.0.10.graal</version>
+            <version>2.0.19.graal</version>
         </dependency>
         <dependency>
             <groupId>commons-codec</groupId>
@@ -143,6 +143,17 @@
             <artifactId>mybatis-plus-generator</artifactId>
             <version>3.5.3</version>
 <!--            <scope>test</scope>-->
+        </dependency>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.9.2</version>
         </dependency>
     </dependencies>
 
