--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,4 +1,8 @@
 spring:
+  mvc:
+    pathmatch:
+#      swagger startup fix
+      matching-strategy: ant_path_matcher
   datasource:
     trans:
       driver-class-name: com.mysql.cj.jdbc.Driver
